# openpasswd

./: .env.sample  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  docker-compose.yaml
entity/: Cargo.toml
entity/src/: account_groups.rs  account_passwords.rs  accounts.rs  devices.rs  lib.rs  prelude.rs  user_password_recovery.rs  users.rs
migration/src/: m20220101_000001_create_table.rs
migrations/2022-04-15-205912_version_0.0.0/: down.sql  up.sql
model/: Cargo.toml
model/src/: accounts.rs  auth.rs  lib.rs
openpass-model/: Cargo.toml
openpass-model/src/: auth.rs  error.rs
openpass-server/: Cargo.toml
openpass-server/src/: main.rs
openpass-server/src/accounts/dto/: mod.rs
openpass-server/src/auth/: controller.rs  mod.rs  service.rs
openpass-server/src/auth/dto/: auth_error.rs  claims.rs  mod.rs
openpass-server/src/core/: mod.rs  result.rs  validator.rs
openpass-server/src/dto/: mod.rs
openpass-server/src/orm/: schema.rs  user.rs
openpasswd-cli/: Cargo.toml
openpasswd-cli/src/: accounts.rs  api.rs  clipboard.rs  generator.rs  groups.rs  login.rs  main.rs  profile.rs
openpasswd-model/: Cargo.toml
openpasswd-model/src/: accounts.rs  auth.rs  error.rs
openpasswd-server/: Cargo.toml
openpasswd-server/src/: main.rs
openpasswd-server/src/accounts/: controller.rs  mod.rs  service.rs
openpasswd-server/src/accounts/dto/: accounts_error.rs  mod.rs
openpasswd-server/src/auth/: controller.rs  mod.rs  service.rs
openpasswd-server/src/auth/dto/: auth_error.rs  claims.rs  mod.rs  refresh_token.rs
openpasswd-server/src/core/: cache.rs  cryptography.rs  mail_service.rs  mod.rs  validator.rs
openpasswd-server/src/devices/: controller.rs  mod.rs
openpasswd-server/src/devices/dto/: mod.rs
openpasswd-server/src/orm/: account_group.rs  device.rs  mod.rs  schema.rs
openpasswd-server/src/repository/: mod.rs  repository.rs  schema.rs
openpasswd-server/src/repository/models/: account.rs  account_group.rs  device.rs  mod.rs  user.rs  user_password_recovery.rs
openpasswd-server/src/repository/repositories/: accounts_repository.rs  devices_repository.rs  mod.rs  users_repository.rs
