[package]
name = "openpass-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openpass-model = { path = "../openpass-model" }
diesel = { version = "1.4.8", features = ["postgres"] }
axum = { version = "0.5.1", features = [ "headers" ] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"
dotenvy = "0.15"
rsa = "0.6.1"
rand = "0.8"
base64 = "0.13.0"
chrono = "0.4"
jsonwebtoken = "8.0"
# TODO use rust-argon2 = "1.0" instead pwhash
pwhash = "1.0.0"