[package]
name = "openpasswd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
copypasta = "0.7.1"
rpassword = "6.0.1"