[package]
name = "openpasswd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
copypasta = "0.7.1"
rpassword = "6.0.1"
directories = "4.0.1"
rand = "0.8"
log = "0.4.17"
