[package]
name = "openpasswd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm = { version = "0.8.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
axum = { version = "0.5.1", features = [ "headers" ] }
# axum-macros = "0.2.2"
cookie = "0.16.0"
tokio = { version = "1.19.2", features = ["full"] }
tower-http = { version = "0.3", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.15.0", features = ["derive"] }
uuid = { version = "1.0.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
redis = { version = "0.21", features = [ "async-std-comp" ] }
aes-gcm = "0.9.4"
log = "0.4"
pretty_env_logger = "0.4"
dotenvy = "0.15"
rsa = "0.6.1"
rand = "0.8"
base64 = "0.13.0"
chrono = "0.4"
jsonwebtoken = "8.0"
rust-argon2 = "1.0"
deadpool-redis = "0.10.2"
lettre = { version = "0.10.0-rc.6", features = [ "tokio1-native-tls" ] }
sha2 = "0.10.2"
hex = "0.4.3"
async-trait = "0.1.53"